--- a/software/hdl/receiver.qsf
+++ b/software/hdl/receiver.qsf
@@ -23,22 +23,22 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLOCK_50
 #============================================================
 # LED
 #============================================================
-set_location_assignment PIN_A15 -to LED[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[0]
-set_location_assignment PIN_A13 -to LED[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[1]
-set_location_assignment PIN_B13 -to LED[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[2]
-set_location_assignment PIN_A11 -to LED[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[3]
-set_location_assignment PIN_D1 -to LED[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[4]
-set_location_assignment PIN_F3 -to LED[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[5]
-set_location_assignment PIN_B1 -to LED[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[6]
-set_location_assignment PIN_L3 -to LED[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LED[7]
+set_location_assignment PIN_A15 -to LEDA[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[0]
+set_location_assignment PIN_A13 -to LEDA[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[1]
+set_location_assignment PIN_B13 -to LEDA[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[2]
+set_location_assignment PIN_A11 -to LEDA[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[3]
+set_location_assignment PIN_D1 -to LEDA[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[4]
+set_location_assignment PIN_F3 -to LEDA[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[5]
+set_location_assignment PIN_B1 -to LEDA[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[6]
+set_location_assignment PIN_L3 -to LEDA[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to LEDA[7]
 
 #============================================================
 # KEY
@@ -53,12 +53,12 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to KEY[1]
 #============================================================
 # GPIO_0, GPIO_0 connect to GPIO Default
 #============================================================
-set_location_assignment PIN_A8 -to CLKOUT_N
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLKOUT_N
+set_location_assignment PIN_A8 -to CLKOUTB
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLKOUTB
 set_location_assignment PIN_D3 -to ENC
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ENC
-set_location_assignment PIN_B8 -to CLKOUT_P
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLKOUT_P
+set_location_assignment PIN_B8 -to CLKOUTA
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to CLKOUTA
 set_location_assignment PIN_C3 -to DITH
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DITH
 set_location_assignment PIN_A2 -to gpio0[2]
@@ -73,38 +73,38 @@ set_location_assignment PIN_A4 -to gpio0[6]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to gpio0[6]
 set_location_assignment PIN_B5 -to gpio0[7]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to gpio0[7]
-set_location_assignment PIN_A5 -to D[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[0]
-set_location_assignment PIN_D5 -to D[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[1]
-set_location_assignment PIN_B6 -to D[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[2]
-set_location_assignment PIN_A6 -to D[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[3]
-set_location_assignment PIN_B7 -to D[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[4]
-set_location_assignment PIN_D6 -to D[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[5]
-set_location_assignment PIN_A7 -to D[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[6]
-set_location_assignment PIN_C6 -to D[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[7]
-set_location_assignment PIN_C8 -to D[8]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[8]
-set_location_assignment PIN_E6 -to D[9]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[9]
-set_location_assignment PIN_E7 -to D[10]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[10]
-set_location_assignment PIN_D8 -to D[11]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[11]
-set_location_assignment PIN_E8 -to D[12]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[12]
-set_location_assignment PIN_F8 -to D[13]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[13]
-set_location_assignment PIN_F9 -to D[14]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[14]
-set_location_assignment PIN_E9 -to D[15]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to D[15]
+set_location_assignment PIN_A5 -to DA[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[0]
+set_location_assignment PIN_D5 -to DA[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[1]
+set_location_assignment PIN_B6 -to DA[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[2]
+set_location_assignment PIN_A6 -to DA[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[3]
+set_location_assignment PIN_B7 -to DA[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[4]
+set_location_assignment PIN_D6 -to DA[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[5]
+set_location_assignment PIN_A7 -to DA[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[6]
+set_location_assignment PIN_C6 -to DA[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[7]
+set_location_assignment PIN_C8 -to DA[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[8]
+set_location_assignment PIN_E6 -to DA[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[9]
+set_location_assignment PIN_E7 -to DA[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[10]
+set_location_assignment PIN_D8 -to DA[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[11]
+set_location_assignment PIN_E8 -to DA[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[12]
+set_location_assignment PIN_F8 -to DA[13]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[13]
+set_location_assignment PIN_F9 -to DA[14]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[14]
+set_location_assignment PIN_E9 -to DA[15]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to DA[15]
 set_location_assignment PIN_C9 -to RAND
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RAND
 set_location_assignment PIN_D9 -to OFA
@@ -240,3 +240,4 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name SYSTEMVERILOG_FILE src/uart.sv
 
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name SYSTEMVERILOG_FILE src/interface.sv
