--- a/software/hdl/receiver.qsf
+++ b/software/hdl/receiver.qsf
@@ -240,7 +240,6 @@ set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "2.5 V"
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name SYSTEMVERILOG_FILE src/uart.v
 
 
 
@@ -263,6 +262,14 @@ set_global_assignment -name BDF_FILE src/receiver_diag.bdf
 
 set_global_assignment -name VERILOG_FILE src/reset_state.v
 
-set_global_assignment -name VERILOG_FILE src/cordic.v
-set_global_assignment -name MIF_FILE ../../../../../../dev/projects/test/test77.5kHz/src/receiver.mif
+
+set_global_assignment -name VERILOG_FILE src/modules/goertzel/src/goertzel.v
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/fp64int32conv.qip
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/int32fp64conv.qip
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/fpsub.qip
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/fpmult.qip
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/fpadd.qip
+set_global_assignment -name QIP_FILE src/modules/goertzel/src/megafunc/fp64int64conv.qip
+set_global_assignment -name VERILOG_FILE src/modules/uart/src/uart.v
+set_global_assignment -name VERILOG_FILE src/modules/cordic/src/cordic.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
